Fixed navbar logo and added z-index for proper scrolling behaviour.

--- a/css/custom.css
+++ b/css/custom.css
@@ -36,6 +36,7 @@ nav {
 	position: fixed;
 	width: 100%;
 	top: 0px;
+	z-index: 10;
 }
 
 #rightBar {
